Expected to fix legend on IOS

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -58,11 +58,11 @@
   border-top: 1px solid var(--c-active);
 }
 
-.portfolio {
+fieldset {
   border: 0;
 }
 
-.portfolio legend {
+fieldset legend {
   font-weight: bold;
 }
 
